# SportsIntell

./: README.md  pyproject.toml  requirements.txt
configs/: soccernet.yaml  sportsmot.yaml
configs/ablations/: beta_01.yaml  beta_02.yaml  beta_03.yaml  beta_04.yaml  beta_05.yaml  beta_06.yaml  kalman_tracker.yaml  no_motion.yaml  p12.yaml  p15.yaml  p18.yaml  p3.yaml  p6.yaml  sportsintell_full.yaml  vanilla_transformer.yaml  without_dmal.yaml  without_tfen.yaml
scripts/: evaluate.py  export_trackeval.py  infer.py  run_ablations.py  train.py
sportsintell/: __init__.py
sportsintell/data/: datasets.py  mot.py
sportsintell/engine/: build.py  evaluator.py  trainer.py
sportsintell/losses/: dmal.py  prediction.py
sportsintell/metrics/: simple_mot.py  trackeval_export.py
sportsintell/models/: attention.py  baselines.py  common.py  sportsintell.py  tfen.py
sportsintell/tracker/: association.py  kalman.py  online_tracker.py
sportsintell/utils/: checkpoint.py  config.py  geometry.py  logger.py
tests/: test_association.py  test_dmal.py  test_model_shapes.py
