[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sportsintell"
version = "0.1.0"
description = "Reference reconstruction of the SportsIntell tracking framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "scipy>=1.10",
  "pyyaml>=6.0",
  "tqdm>=4.66",
  "pandas>=2.0",
  "opencv-python>=4.8",
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sportsintell*"]
